force-app/main/default/objects/Shared_Review_Session__c/Shared_Review_Session__c.object-meta.xml
<CustomObject>
    <description>Collaborative review drafting session.</description>
    <label>Shared Review Session</label>
    <pluralLabel>Shared Review Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>