force-app/main/default/objects/Shared_Review_Session__c/fields/Live_Draft__c.field-meta.xml
<CustomField>
    <fullName>Live_Draft__c</fullName>
    <description>Last saved collaborative draft HTML.</description>
    <label>Live Draft</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>