force-app/main/default/objects/Shared_Review_Session__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <description>Property context for the session.</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Shared_Review_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>